--- a/aboutus.html
+++ b/aboutus.html
@@ -189,10 +189,11 @@
                     </div>
                 </div>
                 <div class="profile judges-item-4">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/surbhi_kanthed_headshot.png" alt="Surbhi Kanthed">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Surbhi Kanthed</h4>
+                        <p>I am a passionate STEM advocate dedicated to empowering others and giving back to the tech community. With hands-on experience in software projects, innovation, and mentoring, I am committed to helping young minds grow through hackathons, collaboration, and creative problem-solving. 
+                        </p>
                     </div>
                 </div>
             </div>
