Adding summer 25 hackathon registration back on

--- a/hackathons.html
+++ b/hackathons.html
@@ -44,7 +44,12 @@
                     <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM Eastern Time - 3:00 PM Eastern Time</div>
                 </li>
             </ul>
-            <p>Registration Closed</p>
+            <button class="button" onclick="registernow()">Register</button>
+            <script>
+                function registernow() {
+                    window.location.href = "https://forms.gle/Pay7Gk416HDBZhLeA";
+                }
+            </script>
         </div>
 
         <!-- Upcoming Hackathons -->
