Added on demand

--- a/student-hub.html
+++ b/student-hub.html
@@ -48,6 +48,10 @@
             <button class="button" onclick='window.location.href="courses.html"'>Sign Up for a Course!</button>
             </div>
             <div class="student-hub-item">
+            <p>If you want to compelete the program at your own pace, sign up for our On Demand courses!</p>
+            <button class="button" onclick='window.location.href="https://forms.gle/n8ahdaxkis44XcWa6"'>Sign Up for an On Demand Course!</button>
+            </div>
+            <div class="student-hub-item">
             <p>If you're proficient in HTML and CSS, sign up for one of our Web Development hackathons.</p>
             <p>If you're proficient in JavaScript, sign up for one of our App Development hackathons.</p>
             <button class="button" onclick='window.location.href="hackathons.html"'>Sign Up for a Hackathon!</button>
