--- a/faq.html
+++ b/faq.html
@@ -36,8 +36,8 @@
             <p>Absolutely! Our nonprofit coding organization welcomes beginners and provides a supportive learning environment. We offer classes designed to teach foundational coding skills, allowing you to learn at your own pace and build your knowledge from the ground up.</p>
         </div>
         <div class="question">
-            <h2>Where is my meeting link for an online class?</h2>
-            <p>We connect over zoom. The link will be emailed 10 minutes before class begins.</p>
+            <h2>Where do classes meet?</h2>
+            <p>We host all of our classes on Discord. The link to join is in the registration form.</p>
         </div>
         <div class="question">
             <h2>Who will be my coaches?</h2>
