--- a/student-hub.html
+++ b/student-hub.html
@@ -37,9 +37,9 @@
 
         <h3>Learn with Purpose. Build with Confidence.</h3>
 
-        <p>At Bit by Bit, you're not just learning to code: you're discovering how to think critically, solve real-world problems, and create technology that makes a difference.</p>
+        <p>At Bit by Bit, you're not just learning to code: you're discovering how to think critically, solve real-world problems, and create technology that makes a difference.</p> 
 
-        <p>Our program is open to students of all ages, and offers six dynamic courses designed to grow with you. Whether you're just starting out or ready to build your first app, there's a class for you.</p>
+        <p>Our program is designed to introduce coding to learners of all ages: from curious upper elementary school students to motivated teens and adults looking to dive into tech. We offer six dynamic courses that grow with you. Whether you're just getting started or ready to build your first app, there's a class for you.</p>
 
         <div class="student-hub">
             <div class="student-hub-item">
@@ -57,10 +57,16 @@
             <button class="button" onclick='window.location.href="hackathons.html"'>Sign Up for a Hackathon!</button>
             </div>
         </div>
-        <style>
-        </style>
 
-
+        <h3>Student Testimonials</h3>
+        <p>"My favorite part of the lesson was the part of style.css where we got to decorate the website and make it look better."</p>
+        <p>"My favorite part of the lesson was designing the layout of the homepage."</p>
+        <p>"I liked the part where you typed HTML and the website just appeared it was kind of nice to see all the work shown into a formatted page."</p>
+        <p>"Seeing the process of creating the website in html then customizing the websites characteristics in css was cool! I'm excited to dive deeper into these concepts."</p>
+        <p>"My favorite part was how forward the lesson is when getting to details and specifics"</p>
+        <p>"I really liked the class and I liked learning how to create my own websites. Also, the instructions were easy to follow."</p>
+        <p>"I love that we are able learn about coding while having fun and being creative. I am excited to take more classes here!"</p>
+        <p>"My favorite part of the course was when we were discovering sections and how you can use them in the style.css to change the website was really amazing!"</p>
             
     
     </div>
