--- a/aboutus.html
+++ b/aboutus.html
@@ -192,8 +192,7 @@
                     <img src="images/surbhi_kanthed_headshot.png" alt="Surbhi Kanthed">
                     <div class="profile-details">
                         <h4>Surbhi Kanthed</h4>
-                        <p>I am a passionate STEM advocate dedicated to empowering others and giving back to the tech community. With hands-on experience in software projects, innovation, and mentoring, I am committed to helping young minds grow through hackathons, collaboration, and creative problem-solving. 
-                        </p>
+                        <p>Surbhi Kanthed is an engineer and passionate STEM advocate with a strong foundation in full-stack development, cloud technologies, and data-driven solutions. She has hands-on experience designing and building scalable applications. Surbhi is dedicated to empowering the next generation of technologists through mentorship, hackathons, and collaborative problem-solving. She believes in the power of technology to inspire and is committed to building inclusive spaces where aspiring individuals can learn, grow, and thrive.</p>
                     </div>
                 </div>
             </div>
