--- a/aboutus.html
+++ b/aboutus.html
@@ -196,28 +196,33 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="coaches">
+            <div class="coaches">
                 <div class="profile judges-item-1">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/malar_kondappan_headshot.jpg" alt="Malar Kondappan">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Malar Kondappan</h4>
+                        <p>I'm Malar Kondappan, a System Architect and Technical Project Manager with over 20 years of experience in building secure, scalable technology solutions. My work has spanned the insurance, finance, and automotive industries, where I've led digital transformation initiatives and delivered enterprise-level systems that balance innovation with stability.</p>
+
+                        <p>With a Master's in Information Systems and Security, I bring a strong foundation in both technology and strategy. Over the years, I’ve guided global, cross-functional teams, architected solutions across multi-cloud environments, and championed Agile and DevOps methodologies to improve performance, security, and delivery speed.</p>
+
+                        <p>Beyond the technical work, I’m passionate about mentoring others, sharing knowledge, and aligning technology with long-term business goals. I believe that great solutions come from a mix of collaboration, curiosity, and a drive to make things better. Outside of work, I enjoy exploring different cuisines and staying connected with the tech community through forums and events.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/srinivasa_ambati.JPG" alt="Srinivasa Ambati">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Srinivasa Ambati</h4>
+                        <p>Results-driven professional with over 19 years of experience in the IT industry, specializing in the design, development, and administration of software applications across various Data and Analytical Platforms such as SAS, SAS Viya, AWS, Hadoop, BigData, Python and Multi Cloud Technologies like AWS, AZURE and GCP and AI based tools. Adept at leading and executing software architecture implementation, upgrades, and migration strategies. Extensive experience in cloud technologies, data warehousing, ETL, RDBMS, and business intelligence solutions. Strong communicator with proven ability to lead teams and work collaboratively with stakeholders across all levels.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <img src="images/vinayak_bhosale_headshot.jpg" alt="Vinayak Bhosale">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h3>Reporting Judge</h3>
+                        <h4>Vinayak Bhosale</h4>
+                        <p>Vinayak Bhosale is a Software Engineer with over 3 years of experience specializing in artificial intelligence, machine learning, and full-stack development. He currently works at Baanyan Software Services, where he designs and builds scalable, data-driven software solutions for enterprise environments. Vinayak holds a Master’s degree in Computer Science from the University of Central Florida, where he actively participated in AI-focused hackathons and academic projects. His technical expertise spans full-stack development, AI, and machine learning. An active member of the tech and open-source communities, Vinayak has developed Python packages for deep learning and automated machine learning (AutoML), published on PyPI, the Python Package Index, contributing to the open-source ecosystem.</p>
                     </div>
-                </div>-->
+                </div>
             </div>
         </section>
 
