--- a/aboutus.html
+++ b/aboutus.html
@@ -223,6 +223,14 @@
                         <p>Vinayak Bhosale is a Software Engineer with over 3 years of experience specializing in artificial intelligence, machine learning, and full-stack development. He currently works at Baanyan Software Services, where he designs and builds scalable, data-driven software solutions for enterprise environments. Vinayak holds a Master’s degree in Computer Science from the University of Central Florida, where he actively participated in AI-focused hackathons and academic projects. His technical expertise spans full-stack development, AI, and machine learning. An active member of the tech and open-source communities, Vinayak has developed Python packages for deep learning and automated machine learning (AutoML), published on PyPI, the Python Package Index, contributing to the open-source ecosystem.</p>
                     </div>
                 </div>
+                <div class="profile judges-item-4">
+                    <img src="images/navaneeth_mourya_headshot.jpg" alt="Navaneeth Mourya">
+                    <div class="profile-details">
+                        <h3>Lead Judge</h3>
+                        <h4>Navaneeth Mourya</h4>
+                        <p>Navaneeth Mourya is an innovation professional working in the healthcare industry. He’s passionate about solving real-world clinical problems through technology and enjoys mentoring the next generation of innovators.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
