--- a/aboutus.html
+++ b/aboutus.html
@@ -185,7 +185,7 @@
                     <img src="images/pulkit_goel.jpg" alt="Pulkit Goel">
                     <div class="profile-details">
                         <h4>Pulkit Goel</h4>
-                        <p>Pulkit Goel is a Staff Engineer at Activision Blizzard Media (Microsoft), where he leads the design and development of scalable ad tech solutions that power advertising across global gaming platforms. With over 17 years of experience in the software industry, Pulkit has a strong track record of building robust systems at scale. During his 10+ years at Yahoo, he contributed to several core platforms—including Yahoo Mail backend services, the Yahoo Ads system, and the GeoLocation Platform. Pulkit is passionate about technology, mentorship, and creating impactful products that blend innovation with real-world user needs..</p>
+                        <p>Pulkit Goel is a Staff Engineer at Activision Blizzard Media (Microsoft), where he leads the design and development of scalable ad tech solutions that power advertising across global gaming platforms. With over 17 years of experience in the software industry, Pulkit has a strong track record of building robust systems at scale. During his 10+ years at Yahoo, he contributed to several core platforms—including Yahoo Mail backend services, the Yahoo Ads system, and the GeoLocation Platform. Pulkit is passionate about technology, mentorship, and creating impactful products that blend innovation with real-world user needs.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-4">
