--- a/ambassador-hub.html
+++ b/ambassador-hub.html
@@ -39,6 +39,7 @@
         <p>As a Bit by Bit Ambassador, you’ll launch and lead a Bit by Bit chapter at your school or in your community, guiding peers through our coding curriculum and cultivating a space where innovation and inclusion go hand in hand.</p>
         <p>We’ll equip you with the curriculum, tools, and support you need. All you need is the courage to lead, the curiosity to explore, and the drive to serve. Your chapter will have the opportunity to compete as a team in our global hackathons, turning ideas into real-world impact. At the end of each semester, you’ll submit a brief reflection: not just to check-in, but to assess growth, impact, and what's next.</p>
         <p>This isn’t about adding a line to your résumé. It’s about becoming the kind of leader who sees a need, builds a solution, and lifts others along the way. Because the future of tech belongs to those who build and lead it with purpose.</p>
+        <p>Our curriculum is designed to introduce coding to learners of all ages: from curious upper elementary school students to motivated teens and adults looking to dive into tech.</p>
         <h3>You’re not just joining a program, you’re starting a movement.</h3>
 
             <button class="button" onclick='window.location.href="https://forms.gle/qQmwTzBCTmwYtxcS6"'>Sign Up to be an Ambassador!</button>
@@ -50,6 +51,37 @@
     
     </div>
 
+    <h1>Our Ambassaodrs</h1>
+    <div class="judges">
+        <div class="profile judges-item-1">
+            <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+            <div class="profile-details">
+                <h4>Victoria Glossip</h4>
+                <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+            </div>
+        </div>
+        <div class="profile judges-item-2">
+            <img src="images/taylor_eaton_headshot.jpeg" alt="Taylor Eaton">
+           <div class="profile-details">
+               <h4>Taylor Eaton</h4>
+               <p>Taylor first taught herself arduino code in high school for a science fair project. She holds certifications in artificial intelligence, and her coding languages include Python, Java, and Excel. Her goal is to increase opportunities for young programmers to achieve their own coding dreams and share her interest in coding with them.</p>
+           </div>
+        </div>
+        <div class="profile judges-item-3">
+            <img src="images/Ambassadors/chinmay_deshmukh_headshot.jpg" alt="Chinmay Deshmukh">
+            <div class="profile-details">
+                <h4>Chinmay Deshmukh</h4>
+                <p>Chinmay Deshmukh is a passionate and driven technology enthusiast with a Bachelor's degree in Artificial Intelligence and Machine Learning. With a strong foundation in software development, machine learning, and data analytics, Chinmay has been consistently building skills across various domains including Python programming, NLP, deep learning, and full-stack development. Known for his curiosity and problem-solving mindset, Chinmay is now seeking to contribute to innovative tech teams and continue growing in roles that blend software engineering, AI research, and automation.</p>
+            </div>
+        </div>
+        <div class="profile judges-item-4">
+            <img src="images/Ambassadors/gabriel_nii_armah_ashitey_headshot.jpg" alt="Gabriel Nii Amarh Ashitey">
+            <div class="profile-details">
+                <h4>Gabriel Nii Amarh Ashitey</h4>
+                <p>My name is Gabriel Nii Amarh Ashitey. I am a Software Engineer by training, a Digital Skills trainer and a Social Impact Enthusiast. I have relative knowledge in Frontend and Backend Development. I teach coding as an Occupational. I am the founder of Manhean Coding Club, an organization that trains teenagers in underserved communities and public schools to acquire basic coding skills for free. I have coding clubs in 10+ basic and senior high schools.</p>
+            </div>
+        </div>
+    </div>
     
 
 </body>
