--- a/mobile.html
+++ b/mobile.html
@@ -65,6 +65,9 @@
             <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
                 <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
             </a>
+            <a href="https://youtube.com/@bit-by-bit-coding?si=CWZtdVFo2la4d6t1" class="social-link">
+                <img src="images/brandlogos/YouTube_Icon/Digital/01 Red/yt_icon_red_digital.png" alt="YouTube" class="social-icon">
+            </a>
             <script type="text/javascript">
                 gnp_url = 'bit-by-bit-coding-1';gnp_num = '4';
             </script>
