--- a/aboutus.html
+++ b/aboutus.html
@@ -227,7 +227,7 @@
                     <div class="profile-details">
                         <h3>Reporting Judge</h3>
                         <h4>Vinayak Bhosale</h4>
-                        <p>Vinayak Bhosale is a Software Engineer with over 3 years of experience specializing in artificial intelligence, machine learning, and full-stack development. He currently works at Baanyan Software Services, where he designs and builds scalable, data-driven software solutions for enterprise environments. Vinayak holds a Master’s degree in Computer Science from the University of Central Florida, where he actively participated in AI-focused hackathons and academic projects. His technical expertise spans full-stack development, AI, and machine learning. An active member of the tech and open-source communities, Vinayak has developed Python packages for deep learning and automated machine learning (AutoML), published on PyPI, the Python Package Index, contributing to the open-source ecosystem.</p>
+                        <p>Vinayak Bhosale is a Software Engineer with over three years of experience in artificial intelligence, machine learning, and full-stack development. He holds a Master’s degree in Computer Science and specializes in building scalable, data-driven software solutions for enterprise environments. Vinayak is also an active contributor to the tech and open-source communities, having developed and published Python packages for deep learning and automated machine learning (AutoML) on PyPI, the Python Package Index, supporting the broader open-source ecosystem.</p>
                     </div>
                 </div>
                 <div class="profile judges-item-4">
