--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
         <!-- Summer 2025 -->
         <div class="container">
             <h1>Summer 2025 Courses (Current)</h1>
-            <p>All prep courses run for 4 weeks, meeting via Discord on 7/5/2025, 7/12/2025, 7/19/2025, & 7/26/2025</p>
+            <p>All prep courses run for 4 weeks, meeting via Discord on July 5th, July 12th, July 19th, and July 26th. These courses include an end-of-session hackathon on August 2nd from 12pm-3pm Eastern Time.</p>
             <h2>Web Development Hackathon Prep</h2>
             <ul>
                 <li>Web Dev Prep Beginner
@@ -165,8 +165,39 @@ function registerb() {
 
 <!-- Spring 2026 -->
 <div class="container">
-    <h1>Spring 2026 Courses (Upcoming)</h1>
-    <p>All prep courses run for 4 weeks, meeting via Discord on January 3rd, January 10th, January 17th, January 24th, January 31st, February 7th, February 14th, February 21st, and February 28th. These courses include an end-of-session hackathon on March 7th from 12pm-3pm Eastern Time.</p>
+    <h1>Spring 2026 Session A Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on January 3rd, January 10th, January 17th, and January 24th. These courses include an end-of-session hackathon on January 31st from 12pm-3pm Eastern Time.</p>
+    <h2>Web Development Hackathon Prep</h2>
+    <ul>
+        <li>Web Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>Web Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <h2>App Development Hackathon Prep</h2>
+    <ul>
+        <li>App Dev Prep Beginner
+            <div class="nested-list">Time: 10:00 AM Eastern Time - 11:00 AM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Intermediate
+            <div class="nested-list">Time: 11:00 AM Eastern Time - 12:00 PM Eastern Time</div>
+        </li>
+        <li>App Dev Prep Advanced
+            <div class="nested-list">Time: 12:00 PM Eastern Time - 1:00 PM Eastern Time</div>
+        </li>
+    </ul>
+    <!--<button class="button" onclick="register()">Register</button>-->
+    <p>Registration Opens December 1st, 2025</p>
+</div>
+
+<div class="container">
+    <h1>Spring 2026 Session B Courses (Upcoming)</h1>
+    <p>All prep courses run for 4 weeks, meeting via Discord on February 7th, February 14th, February 21st, and February 28th. These courses include an end-of-session hackathon on March 7th from 12pm-3pm Eastern Time.</p>
     <h2>Web Development Hackathon Prep</h2>
     <ul>
         <li>Web Dev Prep Beginner
