--- a/aboutus.html
+++ b/aboutus.html
@@ -163,11 +163,35 @@
                         <p>Nikhitha Reddi is an enthusiastic educator and aspiring developer with a strong interest in technology and community impact. With experience in front-end and back-end development, she is passionate about making tech education accessible and engaging for all students, especially those new to programming.</p>
                     </div>
                 </div>
-                <!--<div class="profile coaches-item-3">
-                    <img src="images/hamza_rafeeq.jpeg" alt="Hamza Rafeeq">
+            </div>
+            <div class="coaches">
+                <!--ROW 4-->
+                <div class="profile coaches-item-1">
+                    <img src="images/boubacar_ba_headshot.jpg" alt="Boubacar Ba">
                     <div class="profile-details">
-                        <h4>Hamza Rafeeq</h4>
-                        <p>Hamza Rafeeq is a senior at Independence High School and will be studying Computer Science at the University of Texas at Dallas. He’s an Eagle Scout with a strong interest in tech, teaching, and giving back. He’s worked as a math instructor at Mathnasium and currently teaches Islamic studies at his local mosque. On the side, he builds web games for fun and posts them online. When he’s not coding or teaching, you’ll probably find him playing volleyball or caught up in a good book.</p>
+                        <h4>Boubacar Ba</h4>
+                        <p>I am a Computer Science student at Laurentian University with a passion in software development, machine learning, and data-driven projects. I enjoy learning new skills and sharing my knowledge to others. I am Bilingual in French and English and I'm eager to make a difference and assist others in developing their abilities.</p>
+                    </div>
+                </div>
+                <!--<div class="profile coaches-item-2">
+                    <img src="images/onyechi_obioma_headshot.jpg" alt="Onyechi Obioma">
+                    <div class="profile-details">
+                        <h4>Onyechi Obioma</h4>
+                        <p>Hi everyone! My name is Onyechi Obioma, and I’m currently a freshman at Denis Morris High School. Since elementary school I’ve loved coding, either on Scratch or HTML. I’ve been really into coding with Java recently and I’m excited to work with Bit by Bit Coding!</p>
+                    </div>
+                </div>
+                <div class="profile coaches-item-3">
+                    <img src="images/tvisha_doshi_headshot.png" alt="Tvisha Doshi">
+                    <div class="profile-details">
+                        <h4>Tvisha Doshi</h4>
+                        <p>Hello! I’m Tvisha Doshi, a Computer Engineering major at the University of Texas at Dallas. I discovered my passion for coding and tutoring back in high school, and I’ve been expanding my knowledge in languages like HTML, C++, and Javascript ever since. I love sharing proud moments with students as they code new projects. In my free time, I usually dance, travel, or discover new restaurants.</p>
+                    </div>
+                </div>
+                <div class="profile coaches-item-4">
+                    <img src="images/nikhitha_reddi_headshot.JPG" alt="Nikhitha Reddi">
+                    <div class="profile-details">
+                        <h4>Nikhitha Reddi</h4>
+                        <p>Nikhitha Reddi is an enthusiastic educator and aspiring developer with a strong interest in technology and community impact. With experience in front-end and back-end development, she is passionate about making tech education accessible and engaging for all students, especially those new to programming.</p>
                     </div>
                 </div>-->
             </div>
@@ -182,11 +206,11 @@
                     </div>
                 </div>
                 <div class="profile judges-item-2">
-                    <img src="images/taylor_eaton_headshot.jpeg" alt="Taylor Eaton">
-                   <div class="profile-details">
-                       <h4>Taylor Eaton</h4>
-                       <p>Taylor first taught herself arduino code in high school for a science fair project. She holds certifications in artificial intelligence, and her coding languages include Python, Java, and Excel. Her goal is to increase opportunities for young programmers to achieve their own coding dreams and share her interest in coding with them.</p>
-                   </div>
+                    <img src="images/varsha_venkatesh_headshot.jpeg" alt="Varsha Venkatesh">
+                    <div class="profile-details">
+                        <h4>Varsha Venkatesh</h4>
+                        <p>Varsha is a Software Engineer at Apple, where she leads strategic engineering initiatives across AI, software, privacy, and infrastructure within Apple’s global supply chain ecosystem. She designs and delivers scalable internal platforms that support regulatory compliance, enterprise notification systems, and cross-functional developer productivity. Her work has focused on improving supply chain transparency, ensuring data integrity, and streamlining internal workflows across teams. Outside of her core responsibilities, Varsha is committed to giving back to the broader tech community. She actively supports student innovation and real-world problem solving by mentoring emerging engineers and contributing to initiatives that foster equitable access to technology education.</p>
+                    </div>
                 </div>
                 <div class="profile judges-item-3">
                     <img src="images/pulkit_goel.jpg" alt="Pulkit Goel">
