--- a/aboutus.html
+++ b/aboutus.html
@@ -173,21 +173,31 @@
                         <p>I am a Computer Science student at Laurentian University with a passion in software development, machine learning, and data-driven projects. I enjoy learning new skills and sharing my knowledge to others. I am Bilingual in French and English and I'm eager to make a difference and assist others in developing their abilities.</p>
                     </div>
                 </div>
-                <!--<div class="profile coaches-item-2">
-                    <img src="images/onyechi_obioma_headshot.jpg" alt="Onyechi Obioma">
+                <div class="profile coaches-item-2">
+                    <img src="images/qihang_shen_headshot.jpg" alt="Qihang Shen">
                     <div class="profile-details">
-                        <h4>Onyechi Obioma</h4>
-                        <p>Hi everyone! My name is Onyechi Obioma, and I’m currently a freshman at Denis Morris High School. Since elementary school I’ve loved coding, either on Scratch or HTML. I’ve been really into coding with Java recently and I’m excited to work with Bit by Bit Coding!</p>
+                        <h4>Qihang Shen</h4>
+                        <p>Hi all, my name is Qihang Shen. Currently is a student majoring in data science. I learned C++ and Java. I'd be very glad to expand my knowledge and meet more people.</p>
                     </div>
                 </div>
                 <div class="profile coaches-item-3">
-                    <img src="images/tvisha_doshi_headshot.png" alt="Tvisha Doshi">
+                    <img src="images/shireesha_hanmantharaopet_headshot.jpg" alt="Shireesha Hanmantharaopet">
                     <div class="profile-details">
-                        <h4>Tvisha Doshi</h4>
-                        <p>Hello! I’m Tvisha Doshi, a Computer Engineering major at the University of Texas at Dallas. I discovered my passion for coding and tutoring back in high school, and I’ve been expanding my knowledge in languages like HTML, C++, and Javascript ever since. I love sharing proud moments with students as they code new projects. In my free time, I usually dance, travel, or discover new restaurants.</p>
+                        <h4>Shireesha Hanmantharaopet</h4>
+                        <p>Technology Educator | IT Professional | Advocate for Digital Empowerment</p>
+
+                        <p>I'm a mission-driven technology professional with a strong passion for education and digital empowerment. With a Master’s degree in Computer Science from DePaul University and an engineering background, I’ve built a career that bridges both the corporate tech world and the classroom.</p>
+
+                        <p>My journey began as a coding instructor for K–12 students at Byju’s, where I had the privilege of teaching programming languages like Python, Java, and Scratch. I loved encouraging young learners to think creatively, solve problems, and build real-world applications—while also helping them gain confidence in their tech skills.</p>
+
+                        <p>Later, I joined Deloitte as a Global Application Support (GLAS) Analyst. There, I managed compliance workflows, facilitated IT coordination across global teams, and ensured smooth application support for enterprise clients. I enjoyed acting as the bridge between stakeholders and technical teams, translating complex systems into clear, actionable solutions.</p>
+
+                        <p>Over time, I’ve developed a diverse skill set that includes website and content management, SEO, data analytics, and tools like Jira, Confluence, and SharePoint. I'm especially passionate about using these tools to support non-profits and community organizations—particularly those focused on empowering youth and women. Helping these groups create accessible, engaging digital platforms is work that deeply fulfills me.</p>
+
+                        <p>At the heart of everything I do is a belief that technology should be inclusive, approachable, and transformative. Whether I’m mentoring a student through their first coding project or guiding a team through a system upgrade, I strive to lead with empathy, clarity, and purpose.</p>
                     </div>
                 </div>
-                <div class="profile coaches-item-4">
+                <!--<div class="profile coaches-item-4">
                     <img src="images/nikhitha_reddi_headshot.JPG" alt="Nikhitha Reddi">
                     <div class="profile-details">
                         <h4>Nikhitha Reddi</h4>
