--- a/mobile.html
+++ b/mobile.html
@@ -25,21 +25,25 @@
         <div class="stats-section">
             <div class="stats-container">
                 <div class="stat-box">
-                    <div class="stat-number">39</div>
+                    <div class="stat-number">46</div>
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">929</div>
+                    <div class="stat-number">15,449</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">365</div>
+                    <div class="stat-number">1,282</div>
                     <div class="stat-label">Volunteer Hours</div>
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">29%</div>
                     <div class="stat-label">North Carolinians</div>
                 </div>
+                <!--<div class="stat-box">
+                    <div class="stat-number">30%</div>
+                    <div class="stat-label">Students from Title 1 Schools</div>
+                </div>-->
             </div>
         </div>
         <!-- END STATS SECTION -->
