--- a/main.html
+++ b/main.html
@@ -49,21 +49,25 @@
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">15,449</div>
+                    <div class="stat-number">8,366</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-box">
-                    <div class="stat-number">1,282</div>
-                    <div class="stat-label">Volunteer Hours</div>
+                    <div class="stat-number">1,663</div>
+                    <div class="stat-label">Students</div>
                 </div>
                 <div class="stat-box">
                     <div class="stat-number">29%</div>
                     <div class="stat-label">North Carolinians</div>
                 </div>
-                <!--<div class="stat-box">
+                <div class="stat-box">
                     <div class="stat-number">30%</div>
                     <div class="stat-label">Students from Title 1 Schools</div>
-                </div>-->
+                </div>
+                <div class="stat-box">
+                    <div class="stat-number">57%</div>
+                    <div class="stat-label">Women</div>
+                </div>
             </div>
         </div>
         <!-- END STATS SECTION -->
